# Temas_IA

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  config.py  embeddings.py  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
Agentic_IA/: .gitignore  Basics.py  main.py  pyproject.toml
RAG/: RAG.py  local_persist.py  override_metadata.py  pipeline.py
RAG/connectors/: __init__.py  _base.py  csv.py  docx.py  json.py  markdown.py  pdf.py  txt.py
RAG/inputs/txt/: concepto.txt  logs.txt
_wip_evaluation/: evaluation.md
_wip_fine_tuning/: fine_tuning.md
_wip_langgraph/: langgraph.md
_wip_memory/: memory.md
_wip_prompt_engineering/: prompt_engineering.md
_wip_rag_advanced/: rag_advanced.md
_wip_tools/: tools.md
agents/: basics.py  chain_factory.py  main.py  models.py  parsers.py  prompts.py  pydantic_test.py  runnables.py
embeddings/: embeddings.py
events/: FLOW.md  api.py  chain_factory.py  icloud.py  main.py  models.py  parsers.py  prompts.py  runnables.py
events/static/: index.html
rag_tutorial/: .gitignore  RAG.py  override_metadata.py  pyproject.toml  requirements.txt
rag_tutorial/connectors/: pdf.py
tests/: __init__.py
work/: README.md  chain_factory.py  cv_indexer.py  cv_writer.py  main.py  models.py  parsers.py  prompts.py  runnables.py  sheets_loader.py
