[project]
name = "rag-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.7",
    "dotenv>=0.9.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "pypdf>=6.10.0",
]
